# simple-data-keeper

./: .gitignore  Makefile  README.md  keeper.code-workspace  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/routes/: files.py
app/config/: settings.py
app/core/: app_factory.py
app/schemas/: file_params.py
app/services/: file_service.py
app/storage/: base.py  enums.py  local.py
app/utils/: config_validation.py  helpers.py
tests/: conftest.py
tests/api/routes/: test_files.py  test_ping.py
tests/services/: test_file_service.py
tests/storage/: test_local.py
tests/utils/: test_helpers.py
