[tool.pytest.ini_options]
pythonpath = "."
addopts = "-ra -q --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 160
target-version = "py311"
exclude = ["migrations", ".venv"]

[tool.ruff.lint]
select = ["I", "F", "E", "B", "N"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
